--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Over</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="./app.css">
 </head>
 <body>
     <div class="video-container">
@@ -22,10 +22,10 @@
                 <button type="submit" class="btn" id="saveScoreBtn"
                 onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/game.html" class="btn">Try Again</a>
-            <a href="/index.html" class="btn">Home</a>
+            <a href="./game.html" class="btn">Try Again</a>
+            <a href="./index.html" class="btn">Home</a>
         </div>
     </div>
 </body>
-<script src="end.js"></script>
+<script src="./end.js"></script>
 </html>
