--- a/game.html
+++ b/game.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game On</title>
-    <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./game.css">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <script src="game.js "></script>
+    <script src="./game.js "></script>
 </body>
 
 </html>
