--- a/highscores.html
+++ b/highscores.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Champion</title>
-    <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="highscores.css">
+    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./highscores.css">
 </head>
 <body>
     <div class="video-container">
@@ -14,7 +14,7 @@
             src="https://www.youtube.com/embed/aSk-D86aOtc?controls=0&autoplay=1&mute=1"></iframe>
     </div>
     <article class="lol">
-        <a href="/tbd"> <img src="./gluttony-photos/cliff-hanger.png" width="60"></a>
+        <a href="https://youtu.be/dQw4w9WgXcQ"> <img src="./gluttony-photos/cliff-hanger.png" width="60"></a>
     </article>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
@@ -30,5 +30,5 @@
         </div>
     </div>
 </body>
-<script src="/highscores.js"></script>
+<script src="./highscores.js"></script>
 </html>
