--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glutton</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="./app.css">
 </head>
 <body>
     <div class="video-container">
@@ -15,8 +15,8 @@
     <div class="container">
         <div id="home" class="flex-center flex-column">
             <h1>Quiz</h1>
-            <a class="btn" href="/game.html">Play</a>
-            <a class="btn" href="/highscores.html">high scores</a>
+            <a class="btn" href="./game.html">Play</a>
+            <a class="btn" href="./highscores.html">high scores</a>
         </div>
     </div>
 </body>
