--- a/highscores.html
+++ b/highscores.html
@@ -26,7 +26,7 @@
                 <li class="high-score"></li>
                 <li class="high-score"></li>
             </ul>
-            <a href="/" class="btn">Home</a>
+            <a href="./index.html" class="btn">Home</a>
         </div>
     </div>
 </body>
